# RL-Project

./: .gitignore  Documentation.docx  Env implementation.ipynb  Group Contribution Form Template.docx  Group Contribution Form.docx  Normalise.py  PPO.py  README.md  SB3_workflow.ipynb  WDSEnv-Initial Implementation.ipynb  analyze_wds_results.py  debug_time_steps.py  dueling_dqn.py  evaluate_and_log_wds.py  evaluate_mc.py  evaluate_rollout.py  notes.txt  readme.txt  requirements.txt  temp.inp  test.py  test_eps_length.py  train_mc.py  train_rollout.py
gym4ReaL/: .gitignore  CONTRIBUITING.md  README.md  environments.yaml  pyproject.toml  requirements.txt
gym4ReaL/.github/workflows/: build_docs.yml
gym4ReaL/docs/: conf.py  dam.md  index.md  microgrid.md  robofeeder.md  team.md  wds.md
gym4ReaL/docs/api/: envs.elevator.rst  envs.microgrid.rst  envs.microgrid.simulator.energy_storage.battery_models.ecm_components.rst  envs.microgrid.simulator.energy_storage.battery_models.rst  envs.microgrid.simulator.energy_storage.rst  envs.robofeeder.rst  envs.robofeeder.src.rst  envs.rst  envs.wds.rst  envs.wds.simulator.epynet.rst
gym4ReaL/examples/: benchmarking-rf-v0.py  benchmarking-rf-v1.py
gym4ReaL/examples/dam/: benchmarks.ipynb
gym4ReaL/examples/elevator/: benchmarks.ipynb
gym4ReaL/examples/microgrid/: benchmarks.ipynb  training-tutorial.ipynb
gym4ReaL/examples/trading/: benchmarks.ipynb
gym4ReaL/examples/wds/: benchmarks.ipynb  quick_test_results.json  (+1 more)
gym4ReaL/gym4real/: __init__.py
gym4ReaL/your_package_name.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+492 files in other folders)
