[project]
name = "your_package_name"           # Must be unique on PyPI
version = "0.1.0"
description = "A short summary of what your package does"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

authors = [
  { name = "Your Name", email = "you@example.com" }
]

dependencies = [
  # e.g., "numpy >= 1.22", "requests"
]

[project.urls]
"Homepage" = "https://github.com/yourusername/your-repo"
"Bug Tracker" = "https://github.com/yourusername/your-repo/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

